fixed the paths to landingpages%d.jpg

--- a/project/winesite/templates/index.html
+++ b/project/winesite/templates/index.html
@@ -46,7 +46,7 @@
     
      <div class="row align-right">
       <div data-aos="slide-left"> 
-        <img alt="Explore" height="200px" src="{% static 'images/landingPage1.jpg' %}">
+        <img alt="Explore" height="200px" src="{% static 'images/landingpage1.jpg' %}">
       </div>
           <div class="box">
              <div data-aos="zoom-in">
@@ -58,7 +58,7 @@
 
       <div class="row align-left">
        <div data-aos="slide-right">
-        <img alt="Taste" height="200px" src="{% static 'images/landingPage2.jpg' %}">
+        <img alt="Taste" height="200px" src="{% static 'images/landingpage2.jpg' %}">
       </div>
            <div class="box">
              <div data-aos="slide-left"> 
@@ -70,7 +70,7 @@
 
       <div class="row align-right">
          <div data-aos="slide-left"> 
-        <img alt="Learn" height="200px" src="{% static 'images/landingPage3.jpg' %}">
+        <img alt="Learn" height="200px" src="{% static 'images/landingpage3.jpg' %}">
          </div>
           <div class="box">
             <div data-aos="slide-right">
